add Bootstrap grid for mobile

--- a/static/styles/help/clickable-card.scss
+++ b/static/styles/help/clickable-card.scss
@@ -1,42 +1,56 @@
-.card-row{
-    display: flex;
-    flex-wrap: wrap;
-    &:nth-of-type(1) {
-    margin: 1.2rem 0rem;
-    width: 100%;
-    }
-    .link-wrapper {
-        display: inline-block;
-        flex: 1;
-        min-width: 5rem;
-        height: 5rem;
-        border-left: 1px solid black;
-        &:nth-of-type(1) {
-            border: none;
-        }
-        a {
-            color: #333;
-            height: 100%;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            text-decoration: none;
+@import "../lib/bootstrap/scss/bootstrap-flex";
 
-            span {
-                transition: all .2s ease-in-out;
-                padding: 0 8px;
+.link-wrapper {
+    padding: 8px 0;
+    height: 5rem;
+    /*border-left: 1px solid black;
+    &:nth-of-type(1) {
+        border: none;
+    }*/
+
+    a {
+        color: #333;
+        height: 100%;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        text-decoration: none;
+
+        span {
+            transition: all .2s ease-in-out;
+            padding: 0 8px;
+        }
+        i {
+            display: block;
+            font-size: 1.8rem;
+        }
+        &:hover, &:focus{
+            outline: none;
+            span{
+                transform: scale(1.1);
+                text-shadow: 0px 2px 5px #3333;
             }
-            i {
-                display: block;
-                font-size: 1.8rem;
-            }
-            &:hover, &:focus{
-                outline: none;
-                span{
-                    transform: scale(1.1);
-                    text-shadow: 0px 2px 5px #3333;
-                }
-            }
+        }
+    }
+}
+
+@include media-breakpoint-down(xs) {
+    .link-wrapper {
+        &:nth-of-type(4) {
+            border-bottom-right-radius: 4px;
+        } 
+        &:nth-of-type(3) {
+            border-bottom-left-radius: 4px;
+        }
+    }
+}
+@include media-breakpoint-up(sm) {
+    .link-wrapper {
+        &:nth-of-type(4) {
+            border-bottom-right-radius: 4px;
+        } 
+        &:nth-of-type(1) {
+            border-bottom-left-radius: 4px;
         }
     }
 }
