--- a/views/help/help.hbs
+++ b/views/help/help.hbs
@@ -14,7 +14,7 @@
 
         {{#embed "help/component-card" title="Erste Schritte" icon="fa-child" class="first-steps-card"}}
             {{#content "card-body"}}
-                {{#embed "help/clickable-card" clickable=firstStepsItems}}
+                {{#embed "help/clickable-card" clickable=firstStepsItems link-class="col-sm-3"}}
                 {{/embed}}
             {{/content}}
         {{/embed}}
@@ -64,7 +64,7 @@
 
         {{#embed "help/component-card" title="Nutzungshilfen" icon="fa-map-signs" class="quickHelp-card"}}
             {{#content "card-body"}}
-                {{#embed "help/clickable-card" clickable=quickHelpItems}}
+                {{#embed "help/clickable-card" clickable=quickHelpItems link-class="col-sm-4"}}
                 {{/embed}}
             {{/content}}
         {{/embed}}
@@ -88,7 +88,7 @@
 
         {{#embed "help/component-card" title="Wissenswertes" icon="fa-lightbulb-o" class="information-card"}}
             {{#content "card-body"}}
-                {{#embed "help/clickable-card" clickable=knowledgeItems}}
+                {{#embed "help/clickable-card" clickable=knowledgeItems link-class="col-sm-4"}}
                 {{/embed}}
             {{/content}}
         {{/embed}}
