--- a/static/styles/homework/overview.scss
+++ b/static/styles/homework/overview.scss
@@ -1,39 +1,45 @@
 @import "../lib/colors";
-@import '../lib/filter/filter';
-@import '../lib/bootstrap/scss/bootstrap-grid';
-@import 'homework';
+@import "../lib/filter/filter";
+@import "../lib/bootstrap/scss/bootstrap-grid";
+@import "homework";
 
 .route-homework {
   position: relative;
-  .sort{
+
+  .sort {
     display: flex;
     float: left;
     margin: 10px 0 0;
-    #sortselection_chosen{
+
+    #sortselection_chosen {
       float: left;
       width: calc(100% - 30px) !important;
       min-width: 200px;
     }
-    #desc{
+
+    #desc {
       margin: 0;
       border: zero;
       background-color: #fff;
-      cursor: pointer;
       cursor: hand;
       padding: 0;
       width: 30px;
       text-align: center;
     }
   }
+
   .create {
     float: right;
     margin: 10px 0 0;
+
     i {
       display: none;
     }
+
     p {
       margin: 0;
     }
+
     @include media-breakpoint-down(xs) {
       position: fixed;
       right: 5vw;
@@ -42,21 +48,23 @@
       margin: 0;
       border: zero;
       border-radius: 50%;
-      box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 1px 5px 0 rgba(0, 0, 0, 0.12), 0 3px 1px -2px rgba(0, 0, 0, 0.2);
+      box-shadow: 0 2px 2px 0 rgba(0, 0, 0, .14), 0 1px 5px 0 rgba(0, 0, 0, .12), 0 3px 1px -2px rgba(0, 0, 0, .2);
       padding: 16px;
       width: 56px;
       height: 56px;
       line-height: 24px;
       font-size: 24px;
+
       i {
         display: initial;
       }
+
       p {
         position: absolute;
         top: 11px;
         right: 67px;
 
-        transition: visibility 0s linear 0.3s, opacity 0.3s linear 0s;
+        transition: visibility 0s linear .3s, opacity .3s linear 0s;
         visibility: hidden;
         opacity: 0;
         border-radius: 3px;
@@ -66,6 +74,7 @@
         color: #fff;
         font-size: 14px;
       }
+
       &:hover p {
         visibility: visible;
         opacity: .8;
@@ -73,19 +82,22 @@
       }
     }
   }
-  .ckcontent{
+
+  .ckcontent {
     margin-bottom: 35px;
   }
-  .action-group{
+
+  .action-group {
     position: absolute;
     bottom: 10px;
     left: 10px;
   }
-  .disableable.disabled{
-    filter: grayscale(100%) opacity(0.7);
-    -webkit-filter: grayscale(100%) opacity(0.7);
+
+  .disableable.disabled {
+    filter: grayscale(100%) opacity(.7);
   }
 }
-.tooltip .tooltip-inner{
+
+.tooltip .tooltip-inner {
   text-align: right;
 }
