--- a/static/styles/lib/feedback-button.scss
+++ b/static/styles/lib/feedback-button.scss
@@ -1,4 +1,4 @@
-@import './colors';
+@import "./colors";
 
 .usrp-feedback-button-2 {
   position: fixed;
@@ -12,17 +12,19 @@
   font-size: 14px;
   transform-origin: top right;
   backface-visibility: hidden;
+
   i {
     position: absolute;
     top: 0;
     left: 0;
-    background: rgba(0, 0, 0, 0.2);
+    background: rgba(0, 0, 0, .2);
     width: 50px;
     height: 50px;
   }
+
   span {
     display: block;
-    transition: all 0.2s linear;
+    transition: all .2s linear;
     background: $primaryColor;
     padding: 0 15px 0 65px;
     height: 50px;
@@ -31,14 +33,17 @@
     color: #fff;
     font-size: large;
   }
+
   svg {
     transform: rotate(-90deg);
     width: 100%;
     height: 100%;
+
     .fill {
       fill: #fff;
     }
   }
+
   &:hover span {
     background: $secondaryColor;
   }
