--- a/static/styles/lib/filter/filter.scss
+++ b/static/styles/lib/filter/filter.scss
@@ -1,9 +1,12 @@
-.md-overlay{
+.md-overlay {
   z-index: 110 !important;
 }
-.md-dialog{
+
+.md-dialog {
   z-index: 120 !important;
 }
-.md-menu-content, .md-datepicker-dialog{
+
+.md-menu-content,
+.md-datepicker-dialog {
   z-index: 130 !important;
 }
