--- a/static/styles/team/team.scss
+++ b/static/styles/team/team.scss
@@ -9,21 +9,25 @@
     max-width: 1400px;
     height: auto;
     box-sizing: border-box;
+
     @media screen and (min-width: 767px) {
       padding: 0 30px;
     }
   }
+
   .h-100 {
     position: relative;
     width: 100%;
     min-height: 350px;
     text-align: center;
   }
+
   .img-out {
     display: inline-block;
     padding-top: 20px;
     text-align: center;
   }
+
   .circular {
     margin-top: 10px;
     margin-bottom: 20px;
@@ -31,16 +35,21 @@
     max-width: 150px;
     max-height: 150px;
   }
-  body, html {
+
+  body,
+  html {
     background-position: top center;
     background-size: cover;
     height: 100%;
     min-height: 100%;
     font-weight: 200;
   }
-  body.modal-active, html.modal-active {
+
+  body.modal-active,
+  html.modal-active {
     overflow: hidden;
   }
+
   div[id^=modal-container-] {
     display: table;
     position: fixed;
@@ -50,32 +59,41 @@
     z-index: 1;
     width: 100%;
     height: 100%;
+
     &.show {
       transform: scale(1);
+
       .modal-background {
         animation: fadeIn .5s cubic-bezier(.165, .84, .44, 1) forwards;
         background: 0 0;
+
         .modal {
           animation: scaleUp .5s cubic-bezier(.165, .84, .44, 1) forwards;
           opacity: 0;
         }
       }
-      + .content {
+
+      +.content {
         animation: scaleBack .5s cubic-bezier(.165, .84, .44, 1) forwards;
       }
+
       &.out {
         animation: quickScaleDown 0s .5s linear forwards;
+
         .modal-background {
           animation: fadeOut .5s cubic-bezier(.165, .84, .44, 1) forwards;
+
           .modal {
             animation: scaleDown .5s cubic-bezier(.165, .84, .44, 1) forwards;
           }
         }
-        + .content {
+
+        +.content {
           animation: scaleForward .5s cubic-bezier(.165, .84, .44, 1) forwards;
         }
       }
     }
+
     .modal-background {
       display: table-cell;
       background: rgba(0, 0, 0, .8);
@@ -84,17 +102,20 @@
       height: 100%;
       vertical-align: middle;
       text-align: center;
+
       .modal {
         display: inline-block;
         position: relative;
         border-radius: 3px;
         width: 100%;
         font-weight: 300;
+
         h2 {
           margin-bottom: 15px;
           line-height: 25px;
           font-size: 25px;
         }
+
         p {
           line-height: 22px;
           font-size: 18px;
@@ -102,23 +123,27 @@
       }
     }
   }
+
   .content {
     position: relative;
     z-index: 0;
     background: #fff;
     height: 100%;
     min-height: 100%;
+
     h1 {
       padding: 75px 0 30px;
       text-align: center;
       line-height: 30px;
       font-size: 30px;
     }
+
     .buttons {
       margin: 0 auto;
       padding: 0;
       max-width: 800px;
       text-align: center;
+
       .button {
         display: inline-block;
         margin: 10px;
@@ -130,6 +155,7 @@
         padding: 10px 15px;
         text-align: center;
         font-size: 18px;
+
         &:hover {
           background: #009bd5;
           color: #fff;
@@ -137,10 +163,12 @@
       }
     }
   }
+
   .person-wrapper {
     padding-top: 15px;
     padding-bottom: 15px;
   }
+
   .person {
     transition: all .5s;
     border: 1px solid #d3d3d3;
@@ -148,6 +176,7 @@
     height: 150px;
     overflow: hidden;
     text-align: center;
+
     &:hover {
       transform: scale(1.05);
       transition: box-shadow .2s ease, transform .2s ease, z-index 0s 0s ease;
@@ -155,10 +184,12 @@
       box-shadow: 0 8px 15px rgba(0, 0, 0, .2);
     }
   }
+
   .person-title {
     color: #000;
     font-size: 2em;
   }
+
   .person-desc {
     margin-top: 10px;
     text-transform: uppercase;
@@ -166,34 +197,41 @@
     color: rgba(0, 0, 0, .4);
     font-size: .8em;
   }
+
   .leave {
     transform: rotateX(0) rotateY(0) !important;
     transition-duration: 1.5s;
     transition-timing-function: cubic-bezier(.42, 0, 0, 1) !important;
   }
+
   .modal-dialog {
     padding: 0;
     width: 98%;
     max-width: 1080px !important;
     height: 92%;
   }
+
   .modal-content {
     height: 99%;
   }
+
   .modal-body {
     max-height: calc(100vh - 210px);
     overflow-x: hidden;
     overflow-y: auto;
   }
+
   .container {
     margin-left: 0;
   }
+
   .image {
     border-radius: 10px;
     width: 100%;
     height: auto;
   }
 }
+
 .section-title h4 {
   margin-right: 20px;
   margin-bottom: 0;
